Refactor: split services into dedicated packages